--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AZyrek24/liri-node-app#readme",
   "dependencies": {
+    "colors": "^1.3.2",
     "dotenv": "^6.0.0",
     "node-spotify-api": "^1.0.7",
     "request": "^2.87.0",
